# movie-metadata

./: README.md  environment.yml  pyproject.toml
notebooks/: movie_metadata.ipynb  movie_metadata.py
notebooks/.virtual_documents/: movie_metadata.ipynb
notebooks/__marimo__/: movie_metadata.html  movie_metadata.ipynb
