[project]
name = "movie-metadata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "great-tables>=0.20.0",
    "marimo[sql]>=0.10.7",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "polars[plot]>=1.18.0",
    "pyarrow>=18.1.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "docrepr>=0.2.0",
    "interrogate>=1.7.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.4",
    "mypy>=1.14.0",
    "nbqa>=1.9.1",
    "nbstripout>=0.8.1",
    "openpyxl>=3.1.5",
    "pandas-stubs>=2.2.3.241126",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.13.1",
    "rich>=13.9.4",
    "ruff>=0.8.4",
    "sphinx>=8.1.3",
]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.interrogate]
ignore-init-module = true
fail-under = 100
verbose = 1
exclude = ["*.ipynb_checkpoints*"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = [
    "plotly.*"
]
ignore_missing_imports = true

[tool.nbqa.addopts]
flake8 = [
    "--extend-ignore=D100,E501"
]
interrogate = [
    "--ignore-module"
]
